[package]
name = "quinn_rpk_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow  = "1"
hex     = "0.4"
sha2    = "0.10"
tokio   = { version = "1.46", features = ["full"] }

# Quinn with its default (tokio + rustls) runtime
quinn   = "0.11.8"

# rustls 0.23: just ring + std, NO other features
rustls  = { version = "0.23.8", default-features = false, features = ["ring", "std"] }

# only to generate an Ed25519 key quickly
rcgen   = { version = "0.13", default-features = false, features = ["ring"] }
clap = { version = "4.5.40", features = ["derive"] }
